<resources>
    <string name="app_name">Mambos da banda</string>


    <string-array name="genero_array">
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Outro</item>
    </string-array>
    <string name="title_activity_lojass">Lojass</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="os_meus_pedidos">Os meus pedidos</string>
    <string name="p_gina_inicial">Página inicial</string>
    <string name="produtos">Produtos</string>
    <string name="os_meus_dados">Os meus dados</string>
    <string name="regista_te">Regista-te</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="iniciar_sesss_o">Iniciar sesssão</string>
    <string name="palavra_passe">Palavra-passe</string>
    <string name="email">Email</string>
    <string name="iniciar_sess_o">Iniciar sessão</string>
</resources>